Add tables, wordcloud json

--- a/Unsupervised Sentiment Analysis.ipynb
+++ b/Unsupervised Sentiment Analysis.ipynb
@@ -14,8 +14,9 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "pythonjvsc74a57bd00435599726dd7b78e0adf1b584531734173cf1ea67ff85760afa3a2f73d691f8",
-   "display_name": "Python 3.8.3  ('finsent-env': venv)"
+   "name": "python383jvsc74a57bd00435599726dd7b78e0adf1b584531734173cf1ea67ff85760afa3a2f73d691f8",
+   "display_name": "Python 3.8.3 64-bit ('finsent-env': venv)",
+   "language": "python"
   },
   "metadata": {
    "interpreter": {
@@ -28,7 +29,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
